<resources>
    <string name="app_name">WizeFiles</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="empty_placeholder">(Nothing here)</string>
    <string name="error">Something went wrong</string>
    <string name="hide">Hide</string>
    <string name="install">Install</string>
    <string name="keep_editing">Continue editing</string>
    <string name="loading">Just a moment…</string>
    <string name="maybe_later">Maybe later</string>
    <string name="merge">Merge</string>
    <string name="none">None</string>
    <string name="open_navigation_drawer">Open navigation menu</string>
    <string name="more_options">More options</string>
    <string name="paste">Paste</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="replace">Replace</string>
    <string name="reset">Reset</string>
    <string name="retry">Try again</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="deselect">Deselect</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Deselect all</string>
    <string name="share">Share</string>
    <string name="show">Show</string>
    <string name="skip">Skip</string>
    <string name="stop">Stop</string>
    <string name="system_default">System default</string>
    <string name="unknown">Unknown</string>
    <string name="view">View</string>
    <string name="activity_not_found">We couldn\'t find an app to open this.</string>
    <string name="copied_to_clipboard_format" translatable="false">@string/preference_copied</string>
    <string name="open_settings">Open Settings</string>
    <string name="shortcut_created">Shortcut successfully created</string>
    <string name="all_files_access_rationale_message">To help you manage everything, WizeFiles needs access to your files. Please allow this in the upcoming settings screen.</string>
    <string name="storage_permission_rationale_message">WizeFiles needs permission to access your files. Please tap “ALLOW” on the next screen.</string>
    <string name="storage_permission_permanently_denied_message">WizeFiles needs file access to work properly. Please grant the “Storage” permission in your device settings.</string>
    <string name="notification_permission_rationale_message">We\'d like to keep you updated on your file transfers. Please tap “Allow” on the next screen.</string>
    <string name="notification_permission_permanently_denied_message">To see file transfer updates, please grant “Notification” permission in your device settings.</string>
    <string name="notification_channel_background_activity_start_name">Background tasks</string>
    <string name="notification_channel_background_activity_start_description">Manage tasks while the app is in the background</string>
    <string name="notification_channel_file_job_name">File operations</string>
    <string name="notification_channel_file_job_description">Show progress for moving, copying, and deleting files</string>
    <string name="file_action_archive_password_title">Password Required</string>
    <string name="file_action_archive_password_message_format">“%1$s” is protected with a password.</string>
    <string name="file_action_archive_password_error_empty">Please enter a password</string>
    <string name="file_job_archive_notification_title_one_format">Packing “%1$s” into “%2$s”</string>
    <string name="file_job_copy_notification_title_one_format">Copying “%1$s” to “%2$s”</string>
    <string name="file_job_extract_notification_title_one_format">Extracting “%1$s” to “%2$s”</string>
    <string name="file_job_move_notification_title_one_format">Moving “%1$s” to “%2$s”</string>
    <string name="file_job_transfer_size_notification_text_one_format">%1$s of %2$s</string>
    <string name="file_job_transfer_size_notification_text_multiple_format">%1$,d of %2$,d</string>
    <string name="file_job_delete_notification_title_one_format">Deleting “%1$s”</string>
    <string name="file_job_set_owner_notification_title_one_format">Updating owner for “%1$s”</string>
    <string name="file_job_set_group_notification_title_one_format">Updating group for “%1$s”</string>
    <string name="file_job_set_mode_notification_title_one_format">Updating permissions for “%1$s”</string>
    <string name="file_job_set_selinux_context_notification_title_one_format">Updating SELinux context for “%1$s”</string>
    <string name="file_job_restore_selinux_context_notification_title_one_format">Restoring SELinux context for “%1$s”</string>
    <string name="file_job_transfer_count_notification_text_multiple_format">%1$,d of %2$,d</string>
    <string name="file_job_write_notification_title_format">Writing “%1$s”</string>
    <plurals name="file_job_completion_with_metadata_warning">
        <item quantity="one">Completed with warnings. Files were transferred, but metadata could not be preserved for 1 item.</item>
        <item quantity="other">Completed with warnings. Files were transferred, but metadata could not be preserved for %1$d items.</item>
    </plurals>
    <plurals name="file_job_metadata_warning_count_notification">
        <item quantity="one">1 warning</item>
        <item quantity="other">%1$d warnings</item>
    </plurals>
    <string name="file_job_completion_with_warnings_title">Completed with warnings</string>
    <string name="file_job_create_error_title">Couldn\'t Create Item</string>
    <string name="file_job_create_error_message_format">We ran into an issue creating “%1$s”.\nDetails: %2$s</string>
    <string name="file_job_cannot_copy_into_itself_title">Folder Destination Error</string>
    <string name="file_job_cannot_extract_into_itself_title">Folder Extraction Error</string>
    <string name="file_job_cannot_move_into_itself_title">Folder Destination Error</string>
    <string name="file_job_cannot_copy_move_into_itself_message">You can\'t place a folder inside of itself.</string>
    <string name="file_job_cannot_copy_over_itself_title">File Destination Error</string>
    <string name="file_job_cannot_extract_over_itself_title">File Extraction Error</string>
    <string name="file_job_cannot_move_over_itself_title">File Destination Error</string>
    <string name="file_job_cannot_copy_move_over_itself_message">This action would overwrite the original file with itself.</string>
    <string name="file_job_replace_title_format">Replace “%1$s”?</string>
    <string name="file_job_replace_message_format">A file with this name already exists in “%1$s”.\nWould you like to overwrite it?</string>
    <string name="file_job_replace_target_name">Current file</string>
    <string name="file_job_replace_source_name">New file</string>
    <string name="file_job_merge_title_format">Merge with folder “%1$s”?</string>
    <string name="file_job_merge_copy_message_format">We will ask for your confirmation before replacing any matching files during the copy.</string>
    <string name="file_job_merge_extract_message_format">We will ask for your confirmation before replacing any matching files during extraction.</string>
    <string name="file_job_merge_move_message_format">We will ask for your confirmation before replacing any matching files during the move.</string>
    <string name="file_job_merge_target_name">Current folder</string>
    <string name="file_job_merge_source_name">Merging folder</string>
    <string name="file_list_action_view_sort">View Options &amp; Sorting</string>
    <string name="file_list_action_new_task">Open in New Window</string>
    <string name="file_list_action_new_tab">New Tab</string>
    <string name="file_list_action_dual_pane">Dual-pane view</string>
    <string name="file_list_select_action_copy_to_other_pane">Copy to other pane</string>
    <string name="file_list_select_action_move_to_other_pane">Move to other pane</string>
    <string name="file_list_action_navigate_up">Go Up a Level</string>
    <string name="file_list_action_navigate_to">Jump To…</string>
    <string name="file_list_action_show_hidden_files">Show Hidden Files</string>
    <string name="file_list_action_copy_path">Copy File Path</string>
    <string name="file_list_action_open_in_terminal">Open in TerminalLauncher</string>
    <string name="file_list_action_add_bookmark">Add to Bookmarks</string>
    <string name="file_list_action_create_shortcut">Add Shortcut to Home</string>
    <string name="file_list_select_action_extract" translatable="false">@string/file_item_action_extract</string>
    <string name="file_list_select_action_archive" translatable="false">@string/file_item_action_archive</string>
    <string name="file_list_action_create_file">New File</string>
    <string name="file_list_action_create_directory">New Folder</string>
    <string name="file_item_action_open_with">Open With…</string>
    <string name="file_crypto_encrypt">Encrypt</string>
    <string name="file_crypto_decrypt">Decrypt</string>
    <string name="file_item_action_copy_path" translatable="false">@string/file_list_action_copy_path</string>
    <string name="file_item_action_add_bookmark" translatable="false">@string/file_list_action_add_bookmark</string>
    <string name="file_item_action_create_shortcut" translatable="false">@string/file_list_action_create_shortcut</string>
    <string name="file_item_action_properties">File Details</string>
    <string name="vault_delete">Delete Vault</string>
    <string name="vault_create_folder">New Secure Folder</string>
    <string name="vault_backup">Export Backup</string>
    <string name="file_list_action_restore">Put Back</string>
    <string name="file_list_action_restore_all">Put Everything Back</string>
    <string name="file_list_action_delete_all">Empty Trash Bin</string>
    <string name="media_preview_rotate">Rotate</string>
    <string name="media_preview_share">Share</string>
    <string name="media_preview_properties">Properties</string>
    <string name="media_preview_open_with">Open with another app</string>
    <string name="media_preview_speed">Playback speed</string>
    <string name="audio_player_share">Share</string>
    <string name="audio_player_speed">Playback speed</string>
    <string name="audio_player_properties">Properties</string>
    <string name="audio_player_open_with">Open with another app</string>
    <string name="audio_player_stop">Stop playback and close</string>
    <string name="pdf_viewer_search">Find in PDF</string>
    <string name="pdf_viewer_share">Share</string>
    <string name="pdf_viewer_fullscreen">Fullscreen</string>
    <string name="pdf_viewer_properties">Properties</string>
    <string name="pdf_viewer_open_with">Open with another app</string>
    <string name="storage_add_storage_rclone">Connect Cloud Drive</string>
    <string name="batch_rename_title">Batch rename</string>
    <string name="sync_panes">Synchronize these folders</string>
    <string name="nearby_send_selected">Send nearby</string>
    <string name="apk_signing_sign_title">Sign APK</string>
    <string name="apk_signing_verify_title">Verify APK</string>
    <string name="aab_signing_sign_title">Sign AAB</string>
    <string name="aab_signing_verify_title">Verify AAB</string>
    <string name="apks_signing_sign_title">Sign APKS</string>
    <string name="apks_signing_verify_title">Verify APKS</string>
    <string name="xapk_signing_sign_title">Sign XAPK</string>
    <string name="xapk_signing_verify_title">Verify XAPK</string>
    <string name="apkm_import_title">Import APKM to APKS</string>
</resources>