<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_audio_share"
        android:icon="@drawable/ic_share_control_normal_24dp"
        android:title="@string/audio_player_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_audio_speed"
        android:title="@string/audio_player_speed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_set_ringtone"
        android:title="@string/audio_player_set_ringtone"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_properties"
        android:icon="@drawable/ic_info_control_normal_24dp"
        android:title="@string/audio_player_properties"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_open_with"
        android:icon="@drawable/ic_open_as"
        android:title="@string/audio_player_open_with"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_stop"
        android:title="@string/audio_player_stop"
        app:showAsAction="never" />
</menu>
