<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_paste_control_normal_24dp"
        android:title="@string/paste"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_directory"
        android:icon="@drawable/ic_directory_white_24dp"
        android:title="@string/file_list_action_create_directory"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_file"
        android:icon="@drawable/ic_file_white_24dp"
        android:title="@string/file_list_action_create_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_control_normal_24dp"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
