<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_check_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/select"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_save_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:alphabeticShortcut="a"
        android:icon="@drawable/ic_check_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />
</menu>
